--- a/Notebook/2. MODEL TRAINING.ipynb
+++ b/Notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "id": "6e907719",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting catboost\n",
+      "  Downloading catboost-1.2.10-cp313-cp313-win_amd64.whl.metadata (1.5 kB)\n",
+      "Collecting graphviz (from catboost)\n",
+      "  Downloading graphviz-0.21-py3-none-any.whl.metadata (12 kB)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from catboost) (3.10.0)\n",
+      "Requirement already satisfied: numpy<3.0,>=1.16.0 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from catboost) (2.1.3)\n",
+      "Requirement already satisfied: pandas<4.0,>=0.24 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from catboost) (2.2.3)\n",
+      "Requirement already satisfied: scipy in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from catboost) (1.15.3)\n",
+      "Requirement already satisfied: plotly in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from catboost) (5.24.1)\n",
+      "Requirement already satisfied: six in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from catboost) (1.17.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from pandas<4.0,>=0.24->catboost) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from pandas<4.0,>=0.24->catboost) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from pandas<4.0,>=0.24->catboost) (2025.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (4.55.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (1.4.8)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (24.2)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (11.1.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (3.2.0)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from plotly->catboost) (9.0.0)\n",
+      "Downloading catboost-1.2.10-cp313-cp313-win_amd64.whl (100.2 MB)\n",
+      "   ---------------------------------------- 0.0/100.2 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 3.7/100.2 MB 28.2 MB/s eta 0:00:04\n",
+      "   ----- ---------------------------------- 14.9/100.2 MB 43.4 MB/s eta 0:00:02\n",
+      "   ------------ --------------------------- 30.7/100.2 MB 56.1 MB/s eta 0:00:02\n",
+      "   ------------------ --------------------- 47.2/100.2 MB 62.3 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 60.8/100.2 MB 62.8 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 77.6/100.2 MB 65.8 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 94.6/100.2 MB 67.8 MB/s eta 0:00:01\n",
+      "   --------------------------------------  100.1/100.2 MB 68.2 MB/s eta 0:00:01\n",
+      "   --------------------------------------- 100.2/100.2 MB 55.6 MB/s eta 0:00:00\n",
+      "Downloading graphviz-0.21-py3-none-any.whl (47 kB)\n",
+      "Installing collected packages: graphviz, catboost\n",
+      "\n",
+      "   ---------------------------------------- 0/2 [graphviz]\n",
+      "   ---------------------------------------- 0/2 [graphviz]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   -------------------- ------------------- 1/2 [catboost]\n",
+      "   ---------------------------------------- 2/2 [catboost]\n",
+      "\n",
+      "Successfully installed catboost-1.2.10 graphviz-0.21\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install catboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5d53ea68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting xgboost\n",
+      "  Downloading xgboost-3.2.0-py3-none-win_amd64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: numpy in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from xgboost) (2.1.3)\n",
+      "Requirement already satisfied: scipy in c:\\users\\ismat\\anaconda3\\lib\\site-packages (from xgboost) (1.15.3)\n",
+      "Downloading xgboost-3.2.0-py3-none-win_amd64.whl (101.7 MB)\n",
+      "   ---------------------------------------- 0.0/101.7 MB ? eta -:--:--\n",
+      "    --------------------------------------- 1.8/101.7 MB 17.6 MB/s eta 0:00:06\n",
+      "   ------ --------------------------------- 16.0/101.7 MB 51.4 MB/s eta 0:00:02\n",
+      "   ----------- ---------------------------- 30.4/101.7 MB 58.7 MB/s eta 0:00:02\n",
+      "   ---------------- ----------------------- 43.0/101.7 MB 60.2 MB/s eta 0:00:01\n",
+      "   -------------------- ------------------- 52.7/101.7 MB 56.8 MB/s eta 0:00:01\n",
+      "   ------------------------- -------------- 63.7/101.7 MB 56.3 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 76.5/101.7 MB 56.8 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 92.0/101.7 MB 59.3 MB/s eta 0:00:01\n",
+      "   --------------------------------------  101.4/101.7 MB 59.4 MB/s eta 0:00:01\n",
+      "   --------------------------------------  101.4/101.7 MB 59.4 MB/s eta 0:00:01\n",
+      "   --------------------------------------- 101.7/101.7 MB 47.2 MB/s eta 0:00:00\n",
+      "Installing collected packages: xgboost\n",
+      "Successfully installed xgboost-3.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -54,12 +178,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/stud.csv')"
+    "df = pd.read_csv('stud.csv')"
    ]
   },
   {
@@ -72,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -183,7 +307,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -1031,7 +1155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1045,7 +1169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
